APIを改良
