# src/models/database/table/data/mod.rs
@@ -1,5 +1,10 @@
 mod request;
 mod response;
 
-pub use request::{GetDataRequest, InsertDataRequest, RemoveDataRequest, ZoomLevelPolicy};
-pub use response::{GetDataResponse, SpatialData};
+pub use request::{
+    GetDataQuery, GetDataRequest, InsertDataRequest, OutputFormat, RemoveDataRequest,
+    ZoomLevelPolicy,
+};
+pub use response::{
+    DataGroup, GetDataResponse, GetDataResponseFlex, GetDataResponseRange, GetDataResponseSingle,
+};
